test/good/arrays/array07.px

a = [0]
b = a
print b
a[0] = 1
print b
