test/bad/types5.px

a = 0
a = b = false
